--- a/rails/.gitignore
+++ b/rails/.gitignore
@@ -27,6 +27,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Webpacker and Elm
 /public/packs
 /public/packs-test
 /elm-stuff
