--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
         - db
     volumes:
-      - ./rails:/app/
+      - ./express:/app/
     ports:
       - "3000:3000"
     tty: true
