--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "pg": "^7.12.1",
     "pug": "2.0.0-beta11",
     "sequelize": "^5.18.1",
