--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
