--- a/config/config.json
+++ b/config/config.json
@@ -8,11 +8,11 @@
     "operatorsAliases": false
   },
   "test": {
-    "username": "root",
+    "username": "postgres",
     "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
+    "database": "pj_test",
+    "host": "db",
+    "dialect": "postgres",
     "operatorsAliases": false
   },
   "production": {
