--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.12.1",
     "pug": "2.0.0-beta11",
     "sequelize": "^5.18.1",
