--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --legacy-watch ./bin/www",
+    "start": "nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
     "test": "jest"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
+    "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
