--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,8 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
+      env:
+        session_secret: yabbadabbadoo
+        g_auth_client_id: XXCLIENTIDXX 
+        g_auth_client_secret: XXCLIENTSECRETXX
+        g_auth_callback: http://example.com
