--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
 
     - name: npm install, build, and test
       run: |
+        env 
         npm ci
         npm run build --if-present
         npm test
