--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,21 @@
       "name": "Docker: Attach to Node",
       "type": "node",
       "request": "attach",
+      "port": 9229,
       "remoteRoot": "/app"
+    },
+    {
+      "name": "Debug Jest Tests",
+      "type": "node",
+      "request": "launch",
+      "runtimeArgs": [
+        "--inspect-brk",
+        "${workspaceRoot}/node_modules/jest/bin/jest.js",
+        "--runInBand"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "port": 9229
     }
   ]
 }
