--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
-    "test": "jest",
+    "test": "jest --coverage",
     "test-watch": "jest --watch"
   },
   "dependencies": {
