--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
     "test": "jest --coverage",
     "test-watch": "jest --watch",
-    "migrate": "./node_modules/.bin/sequelize-cli db:migrate",
-    "migrate:reset": "./node_modules/.bin/sequelize-cli db:migrate:undo:all && npm run migrate"
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:reset": "sequelize-cli db:migrate:undo:all && npm run migrate"
 
   },
   "dependencies": {
