see if we can load a diff db

--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,14 @@
     "dialect": "postgres",
     "operatorsAliases": false
   },
+  "ci": {
+    "username": "postgres",
+    "password": null,
+    "database": "pj_test",
+    "host": "db",
+    "dialect": "postgres",
+    "operatorsAliases": false
+  },
   "production": {
     "username": "root",
     "password": null,
