--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
     - name: npm test
       run: npm run test
       env:
+        NODE_ENV: ci
         SESSION_SECRET: yabbadabbadoo
         G_AUTH_CLIENT_ID: XXCLIENTIDXX 
         G_AUTH_CLIENT_SECRET: XXCLIENTSECRETXX
