--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     - name: create test database
       run: docker-compose exec --user postgres db createdb pj_test
       env:
+        COMPOSE_INTERACTIVE_NO_CLI: true
         NODE_ENV: test
 
     - name: migrate test database
