yay ci debugging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,14 +26,14 @@ jobs:
         NODE_ENV: test
 
     - name: run tests
-      run: docker-compose run web npm run test
+      run: docker run --network container:web npm run test
       env:
         SESSION_SECRET: yabbadabbadoo
         G_AUTH_CLIENT_ID: XXCLIENTIDXX 
         G_AUTH_CLIENT_SECRET: XXCLIENTSECRETXX
         G_AUTH_CALLBACK: http://example.com
 
-    - name: Code Coverage
-      uses: codecov/codecov-action@v1.0.2
-      with:
-        token: ${{secrets.CODECOV_TOKEN}} #required
+    # - name: Code Coverage
+    #   uses: codecov/codecov-action@v1.0.2
+    #   with:
+    #     token: ${{secrets.CODECOV_TOKEN}}
