--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       run: docker-compose up --detach
 
     - name: create test database
-      run: docker-compose exec --user postgres db createdb pj_test
+      run: docker run --network container:db --user postgres createdb pj_test
       env:
         COMPOSE_INTERACTIVE_NO_CLI: true
         NODE_ENV: test
@@ -32,7 +32,7 @@ jobs:
         G_AUTH_CLIENT_ID: XXCLIENTIDXX 
         G_AUTH_CLIENT_SECRET: XXCLIENTSECRETXX
         G_AUTH_CALLBACK: http://example.com
-
+    # TODO: uncomment me
     # - name: Code Coverage
     #   uses: codecov/codecov-action@v1.0.2
     #   with:
