--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,20 +12,27 @@ jobs:
       uses: actions/checkout@v1
 
     - name: docker-compose build
-      run: docker-compose build --no-cache
+      run: |
+        docker-compose build --no-cache
+        docker-compose up --abort-on-container-exit
       env:
         NODE_ENV: test
 
-    - name: docker-compose up
-      # run: docker-compose up --detach
-      run: docker-compose up --abort-on-container-exit
-      env:
-        NODE_ENV: test
+    # - name: docker-compose build
+    #   run: docker-compose build --no-cache
+    #   env:
+    #     NODE_ENV: test
+
+    # - name: docker-compose up
+    #   # run: docker-compose up --detach
+    #   run: docker-compose up --abort-on-container-exit
+    #   env:
+    #     NODE_ENV: test
 
     - name: wait for postgres
       run: sleep 300 
 
-    - name: docker debut
+    - name: docker debug
       run: docker ps
 
     - name: create test database
