--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     - name: docker-compose build
       run: |
         docker-compose build --no-cache
+        ls -alh
+        ls -alh node_modules
         docker-compose up --abort-on-container-exit
       env:
         NODE_ENV: test
