--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
+    "start": "./node_modules/.bin/nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
     "test": "jest --coverage",
     "test-watch": "jest --watch",
     "migrate": "sequelize-cli db:migrate",
