--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
-    - name: docker-compose build
+    - name: docker-compose testing
       run: |
-        docker-compose build --no-cache
+        docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --detach
+        # docker-compose build --no-cache
         ls -alh
-        pwd
-        docker-compose up --abort-on-container-exit
+        #docker-compose up --abort-on-container-exit
       env:
         NODE_ENV: test
 
