--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,13 @@
 version: "3"
 
-volumes:
-  postgres-data:
-
 services:
 
   web:
-    build:
-      context: . 
-      dockerfile: web.Dockerfile
+    image: patternjournal/pj-web:latest
     container_name: pj-web
     depends_on:
         - db
-    volumes:
-      - ./:/app/
-    ports:
-      - "3000:3000"
-      - "9229:9229"
-    tty: true
 
   db:
     image: postgres:11.5
     container_name: pj-db
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    environment: []
-    ports:
-      - "5432:5432"
