--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -11,6 +11,11 @@ services:
     build:
       context: . 
       dockerfile: web.ci.Dockerfile
+    environment:
+      - SESSION_SECRET=yabbadabbadoo
+      - G_AUTH_CLIENT_ID=XXCLIENTIDXX 
+      - G_AUTH_CLIENT_SECRET=XXCLIENTSECRETXX
+      - G_AUTH_CALLBACK=http://example.com
     ports:
       - "3000:3000"
     tty: true
