--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -11,6 +11,7 @@ services:
     build:
       context: . 
       dockerfile: web.ci.Dockerfile
+    # Set fake Auth ENVs directly, for the CI env
     environment:
       - SESSION_SECRET=yabbadabbadoo
       - G_AUTH_CLIENT_ID=XXCLIENTIDXX 
