--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,9 @@ jobs:
     - name: sleep
       run: sleep 30
 
+    # -T disables the TTY allocation
     - name: create test database
-      run: docker-compose exec --user postgres db createdb pj_test
-      env:
-        COMPOSE_INTERACTIVE_NO_CLI: true
+      run: docker-compose exec -T --user postgres db createdb pj_test
 
     - name: migrate test database
       run: |
