--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,6 @@ jobs:
     - name: docker-compose up
       run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --detach
 
-    - name: sleep
-      run: sleep 30
-
     # -T disables the TTY allocation
     - name: create test database
       run: docker-compose exec -T --user postgres db createdb pj_test
@@ -28,7 +25,7 @@ jobs:
     - name: migrate test database
       run: |
         echo "$NODE_ENV"      
-        NODE_ENV=test docker-compose run web npm run migrate
+        docker-compose run -e NODE_ENV=test web npm run migrate
       env:
         NODE_ENV: test
 
