--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,10 @@ jobs:
       run: docker-compose exec -T --user postgres db createdb pj_test
 
     - name: migrate test database
-      run: |
-        echo "$NODE_ENV"      
-        docker-compose run -e NODE_ENV=test web npm run migrate
-      env:
-        NODE_ENV: test
+      run: docker-compose run -e NODE_ENV=test web npm run migrate
 
     - name: run tests
-      run: docker run --network container:web npm run test
+      run: docker-compose run web npm run test
       env:
         SESSION_SECRET: yabbadabbadoo
         G_AUTH_CLIENT_ID: XXCLIENTIDXX 
