--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,7 @@ jobs:
     - name: run tests
       run: docker-compose run -T web npm run test -- --forceExit
 
-    # TODO: uncomment me
-    # - name: Code Coverage
-    #   uses: codecov/codecov-action@v1.0.2
-    #   with:
-    #     token: ${{secrets.CODECOV_TOKEN}}
+    - name: Code Coverage
+      uses: codecov/codecov-action@v1.0.2
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
