--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
     - name: docker-compose up
       run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --detach
 
+    # Sometimes Postgres isn't ready... we could be smarter.
+    - name: wait on postgres
+      run: wait 5
+      
     # -T disables the TTY allocation
     - name: create test database
       run: docker-compose exec -T --user postgres db createdb pj_test
