--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "start": "node ./bin/www",
     "start-dev": "nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
-    "test": "jest --coverage",
+    "test": "NODE_ENV=test npm run migrate:reset && jest --coverage",
     "test-watch": "jest --watch",
     "migrate": "sequelize-cli db:migrate",
     "migrate:reset": "sequelize-cli db:migrate:undo:all && npm run migrate"
-
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
