--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "jest": "^24.9.0",
     "nodemon": "^1.19.2",
+    "passport-mock-strategy": "^2.0.0",
     "supertest": "^4.0.2"
   }
 }
