--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,11 @@ jobs:
     - name: get code coverage files
       run: |
         echo '***************************************'
-        docker-compose run web ls -alh
+        docker-compose run web ls test -alh
         echo '***************************************'
-        ls -alh 
+        ls test -alh 
         echo '***************************************'
-        docker cp pj-web:/coverage/. .
+        docker cp pj-web:/test/coverage/. .
 
     - name: upload code coverage
       uses: codecov/codecov-action@v1.0.2
