can i really not make a directory?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
     - name: run tests
       run: |
         docker-compose run web mkdir /test/coverage 
+        docker-compose run web ls /test 
         docker-compose run web touch /test/coverage/yep.txt
         docker-compose run -T web npm run test -- --forceExit
      
