--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
     # --runInBand to run serially
     - name: run tests
       run: |
-        docker-compose run web mkdir /test/coverage 
+        docker-compose run web mkdir -p /test/coverage 
         docker-compose run web ls /test 
         docker-compose run web touch /test/coverage/yep.txt
         docker-compose run -T web npm run test -- --forceExit
