--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         # docker-compose run web mkdir -p test/coverage 
         # docker-compose run web ls test 
         # docker-compose run web touch test/coverage/yep.txt
-        mkdir test/coverage
+        # mkdir test/coverage
         ls test
         touch test/coverage/yeesh.txt
         docker-compose run -T web npm run test -- --forceExit
