--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,9 +60,9 @@ jobs:
         echo '***************************************'
         docker-compose run web ls /test -alh
         echo '***************************************'
-        ls test -alh 
+        ls test/coverage -alh 
         echo '***************************************'
-        docker cp pj-web:/test/coverage/. .
+        # docker cp pj-web:/test/coverage/. .
 
     - name: upload code coverage
       uses: codecov/codecov-action@v1.0.2
