--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,11 @@ jobs:
     # --runInBand to run serially
     - name: run tests
       run: |
-        docker-compose exec web mkdir -p test/coverage 
-        docker-compose exec web touch test/coverage/yep.txt
-        docker-compose exec web ls test/coverage
+        docker-compose exec -T web mkdir -p test/coverage 
+        docker-compose exec -T web touch test/coverage/yep.txt
+        docker-compose exec -T web ls test/coverage
         docker-compose exec -T web npm run test -- --forceExit
-        docker-compose exec web ls -alh test/coverage
+        docker-compose exec -T web ls -alh test/coverage
      
 
     # Tests and code coverage run _in_ the contianer.
