--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,18 +46,19 @@ jobs:
         docker-compose exec -T web ls test/coverage
         docker-compose exec -T web npm run test -- --forceExit
         docker-compose exec -T web ls -alh test/coverage
+        docker cp pj-web:/test/coverage/. .
      
 
     # Tests and code coverage run _in_ the contianer.
     #  No volumes here, so copy the coverage/ folder back to the host.
-    - name: get code coverage files
-      run: |
-        echo '***************************************'
-        docker-compose run web ls /test -alh
-        echo '***************************************'
-        ls test/coverage -alh 
-        echo '***************************************'
-        # docker cp pj-web:/test/coverage/. .
+    # - name: get code coverage files
+    #   run: |
+    #     echo '***************************************'
+    #     docker-compose run web ls /test -alh
+    #     echo '***************************************'
+    #     ls test/coverage -alh 
+    #     echo '***************************************'
+    #     # docker cp pj-web:/test/coverage/. .
 
     - name: upload code coverage
       uses: codecov/codecov-action@v1.0.2
