--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
     - name: docker-compose build
       run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml build --no-cache
 
+    # Actually bring the docker-compose cluster up
     # --abort-on-container-exit instead of detach exposes docker-compose errors
     - name: docker-compose up
       run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --detach
