--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start-dev": "NODE_ENV=development ./node_modules/.bin/nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
-    "test": "NODE_ENV=test npm run migrate:reset && jest --coverage --runInBand --forceExit",
+    "test": "NODE_ENV=test npm run migrate:reset && jest --coverage --forceExit",
     "test-watch": "jest --watch",
     "migrate": "sequelize-cli db:migrate",
     "migrate:reset": "sequelize-cli db:migrate:undo:all && npm run migrate"
