--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-dev": "NODE_ENV=test ./node_modules/.bin/nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
+    "start-dev": "NODE_ENV=development ./node_modules/.bin/nodemon --legacy-watch --inspect=0.0.0.0 ./bin/www",
     "test": "NODE_ENV=test npm run migrate:reset && jest --coverage --forceExit",
     "test-watch": "jest --watch",
     "migrate": "sequelize-cli db:migrate",
