--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "bulma": "^0.7.5",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^1.3.3",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
-    "express-session": "^1.16.2",
+    "helmet": "^3.21.1",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
