--- a/pm2Config.json
+++ b/pm2Config.json
@@ -1,6 +1,6 @@
 {
   "apps": [{
-    "script" : "./app.js",
+    "script" : "./bin/www",
     "env": {
       "NODE_ENV": "production",
       "PORT": "8080"
