--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test-watch": "jest --watch",
     "migrate": "sequelize-cli db:migrate",
     "migrate:reset": "sequelize-cli db:migrate:undo:all && npm run migrate",
-    "prettify": "./node_modules/.bin/prettier --write '**/*.js' '**/*.md' '**/*.yml' "
+    "prettify": "./node_modules/.bin/prettier --write '**/*.js' '**/*.md' '**/*.yml' ",
+    "loadtest-prod": "./node_modules/.bin/loadtest -c 10 --rps 200 https://patternjournal.app/",
+    "benchmark-prod": "./node_modules/.bin/loadtest -c 10 -n 1000  https://patternjournal.app/"
   },
   "dependencies": {
     "bulma": "^0.7.5",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "jest": "^24.9.0",
+    "loadtest": "^3.0.8",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2"
